# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WRA_Package"
version = "0.0.1"
description = "Package to investigate wind resource assesment from reanalysis data"
authors = [
    { name = "Tessa Bruggeling", email = "s243083@dtu.dk" },
    { name = "Kali Vanderlaan", email = "s242667@dtu.dk" },
    { name = "Benedikt Pabinger", email = "s242862@dtu.dk" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "tk"

]

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-bug_hunters.git"